samples/_failures_safe/1761145183_ad4c26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99a6b379.c: In function ‘main’:
./samples/SAFE/__tmp_99a6b379.c:179:39: error: expected ‘)’ at end of input
  179 |     for (int i = 0; i < token_count; i
      |         ~                             ^
      |                                       )
./samples/SAFE/__tmp_99a6b379.c:179:5: error: expected declaration or statement at end of input
  179 |     for (int i = 0; i < token_count; i
      |     ^~~
